
2019-06-11  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (check, checkmanual): now fails if the testsuite reports
	  any unexpected result (exit with non-zero return)

2019-05-24  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: early unset of COB_ variables (before we set them...)

2019-04-06  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am, atlocal.in: splitted some make targets and added new
	  localcheck target, which runs the testsuite using the current
	  environment (whatever GnuCOBOL version is in PATH)

2019-03-23  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_fundamental.at, testsuite.src/run_misc.at:
	  adjusted C test sources in the testsuite to include stdio.h
	  where necessary

2019-03-09  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite.src/*: adjusted C test sources in the testsuite
	  with missing/wrong external attributes

2019-02-18  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: cleanup distribution rules

2019-01-03  Edward Hart <edward.dan.hart@gmail.com>

	* testsuite.src/run_xml.at: renamed to run_ml.at

2018-11-11  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal_win: dynamically set COB_OBJECT_EXT and COB_EXE_EXT

2018-08-07  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_functions.at: Rename CONTENTS-OF to CONTENT-OF

2018-07-30 Edward Hart <edward.dan.hart@gmail.com>

	* testsuite.src/run_file.at, testsuite.src/syn_file.at: merge tests
	  added by Joe Robbins in 2014 to the fileiorewrite branch.

2018-06-21  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_functions.at: Test CONTENTS-OF and
	  CONTENT-LENGTH

2018-04-24  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: BUG #515 Fixed test cases.

2018-04-16  Luke Smith <cobcoder@users.sourceforge.net>

	* testsuite.src/run_manual_screen.at
	   - Add keywords and SIZE to special key tests.

2018-04-10  Luke Smith <cobcoder@users.sourceforge.net>

	* testsuite.src/run_manual_screen.at