@@ -145,5 +145,8 @@ else
 fi
 export PATHSEP
 
+# to ensure that no external DB_HOME is polluted: unset
+DB_HOME="" && export DB_HOME
+
 # For the very rare cases where cobc/libcob may need to know if they're running in test mode:
 COB_IS_RUNNING_IN_TESTMODE=1 && export COB_IS_RUNNING_IN_TESTMODE
